data/derived/comb/progs/unify/prog7213.ml.out
Characters 354-416:
  | 4 -> buildThresh(build(rand, depth - 1),buildX(),buildY()),buildX();;
         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type expr
